# MDW

./: CMakeLists.txt  MDW.kdev4  README  build_debug.sh  build_release.sh  install_dependencies.sh  readme.md
kvs/: CMakeLists.txt
kvs/src/: StorageCellLocalMemory.cpp
logger/: CMakeLists.txt
logger/include/logger/: Api.hpp  Configuration.hpp  Level.hpp  Module.hpp  Scope.hpp  Stack.hpp  Stream.hpp
logger/src/: Api.cpp  Manager.cpp  Manager.hpp  Module.cpp  Scope.cpp  Stack.cpp  Stream.cpp  ThreadContext.cpp  ThreadContext.hpp
mme/: CMakeLists.txt
mme/include/mme/: Query.hpp  QueryDetails.hpp
mme/src/: CMakeLists.txt  Query.cpp  QueryDetails.cpp
mme/src/bom/: ApplicationConfig.cpp  ApplicationConfig.hpp  CMakeLists.txt  Color.hpp  ConnectedSet.cpp  ConnectedSet.hpp  ConnectedSetStats.cpp  ConnectedSetStats.hpp  Geometry.hpp  Node.cpp  Node.hpp  NodeGeoIndex.cpp  NodeGeoIndex.hpp  Parameters.cpp  Parameters.hpp  QueryContext.cpp  QueryContext.hpp  Segment.cpp  Segment.hpp  Shape.cpp  Shape.hpp  ShapeHandler.hpp  Tools.cpp  Tools.hpp
mme/src/process/: CMakeLists.txt  CmdExtractShapes.cpp  CmdExtractShapes.hpp  CmdIdentifyShapes.cpp  CmdIdentifyShapes.hpp  CmdNodeGraphExtract.cpp  CmdNodeGraphExtract.hpp  CmdNodeGraphReduce.cpp  CmdNodeGraphReduce.hpp  CmdNodeGraphSplit.cpp  CmdNodeGraphSplit.hpp  CmdPreprocess.cpp  CmdPreprocess.hpp  CmdSerializeShapeSvg.cpp  CmdSerializeShapeSvg.hpp
mme/src/shapes/: CMakeLists.txt  ShapeArc.cpp  ShapeArc.hpp  ShapeArrow.cpp  ShapeArrow.hpp  ShapeCircle.cpp  ShapeCircle.hpp  ShapeCross.cpp  ShapeCross.hpp  ShapeEllipse.cpp  ShapeEllipse.hpp  ShapeHandlerRegistry.cpp  ShapeHandlerRegistry.hpp  ShapeLine.cpp  ShapeLine.hpp  ShapeRectangle.cpp  ShapeRectangle.hpp  ShapeText.cpp  ShapeText.hpp
mme_bin/: CMakeLists.txt
mme_bin/src/: main.cpp
mme_uhf/: CMakeLists.txt  MsgApiResult.hpp  ServiceGetJob.cpp
mme_uhf/src/: OnLibInit.cpp
mme_uhf/src/dto/: MsgJobDetails.hpp  MsgJobStatus.hpp
mme_uhf/src/service/: ServiceCreateJob.cpp  ServiceCreateJob.hpp  ServiceGetJob.cpp  ServiceGetJob.hpp
mme_wtf/: CMakeLists.txt  ServiceCreateJob.cpp  ServiceCreateJob.hpp  ServiceGetJob.hpp
old/tasks.old/: CMakeLists.txt
old/tasks.old/src/: Manager.cpp  Queue.cpp  Queue.hpp  QueueConsumer.cpp  QueueConsumer.hpp  QueueHandler.cpp  QueueHandler.hpp  QueueManager.cpp  QueueManager.hpp  Task.cpp  TaskProcessorRegistry.cpp
toolbox/: CMakeLists.txt
toolbox/include/toolbox/: Base64.hpp  ExecutionContext.hpp  Image.hpp  Logger.hpp  Macros.hpp  Maker.hpp  ObjectModelHelpers.hpp  PtreeHelper.hpp  ScopedChrono.hpp  Semaphore.hpp  StringUtils.hpp  Typename.hpp  Types.hpp
toolbox/src/: Base64.cpp  Base64Impl.cpp  Base64Impl.hpp  ExecutionContext.cpp  Logger.cpp  Maker.cpp  PtreeHelper.cpp  ScopedChrono.cpp  StringUtils.cpp  Types.cpp
toolbox/src/entity/: Entity.cpp  Factory.cpp
toolbox/src/ptree/: Conversions.cpp  Helper.cpp  Specializations.cpp
toolbox/test/: BridgePtreeAttribute.hpp  BridgePtreeClass.hpp  Event.hpp  PtreeBridge.hpp  PtreeSpecializations.cpp  PtreeSpecializations.hpp  main.cpp
uhf/: CMakeLists.txt
uhf/include/uhf/: IAbility.hpp  IBroker.hpp  IComponent.hpp  IComponentConfiguration.hpp  IComponentMaker.hpp  IComponentRegistry.hpp  IObject.hpp  IProperty.hpp
uhf/service/: InvocationRequest.cpp  Service.cpp  ServiceConfiguration.hpp  ServiceRegistry.cpp
uhf/service/service/: Service.hpp  ServiceRegistry.hpp
uhf/src/: IAbility.cpp  IBroker.cpp  IComponent.cpp  IComponentRegistry.cpp  IObject.cpp  IProperty.cpp  OnLibInit.cpp
uhf/src/bus/: BusMessage.cpp  BusMessageDecoderRegistry.cpp  BusMessageListener.cpp  MessageQueue.cpp  MessageQueue.hpp  TaskSendBusMessage.cpp  TaskSendBusMessage.hpp
uhf/src/core/: ComponentFactory.cpp  ComponentMakerRegistry.cpp
uhf/src/daemon/: Daemon.cpp
uhf/src/http/: InvocationRequest.cpp
uhf/src/job/: API.cpp  Job.cpp  JobManager.cpp
uhf/src/tasks/: Queue.cpp  Queue.hpp  QueueManager.hpp  Task.cpp  TaskManager.cpp  TaskProcessorRegistry.cpp
uhf_be/: CMakeLists.txt
uhf_be/src/: main.cpp
uhf_bin/: CMakeLists.txt
uhf_bin/src/: main.cpp
uhf_bus/: CMakeLists.txt
uhf_bus/src/: BusMessage.cpp  BusMessageDecoderRegistry.cpp  BusMessageListener.cpp  BusMessageListener.hpp  TaskSendBusMessage.cpp
uhf_cmd/: CMakeLists.txt
uhf_core/: CMakeLists.txt
uhf_core/src/core/: Registry.cpp
uhf_http/: CMakeLists.txt
uhf_http/src/: HttpConnection.cpp  HttpService.cpp  HttpService.hpp  HttpTrafficHandler.cpp  HttpTrafficHandler.hpp  InvocationRequest.cpp  QueryReply.cpp  QueryReply.hpp  Service.cpp  ServiceRegistry.cpp  StaticPages.hpp
uhf_http/src/component/: ComponentRegistration.cpp  TrafficHandler.hpp  TrafficHandlerConfiguration.hpp  TrafficHandlerImpl.cpp  TrafficHandlerImpl.hpp
uhf_mhd/: CMakeLists.txt  findMHD.cmake
uhf_mhd/src/: HttpConnection.cpp  MHD_config.h  OnLibInit.cpp  StaticPages.cpp
uhf_mhd/src/component/: OnLibLoading.cpp  TrafficHandler.cpp  TrafficHandler.hpp  (+1 more)
uhf_svc/: CMakeLists.txt
uhf_svc/src/: ServiceConfiguration.cpp  ServiceInvocationTask.cpp  ServiceRegistry.cpp
uhf_sysmon/: CMakeLists.txt
uhf_sysmon/src/: MsgSimpleString.hpp  OnLibInit.cpp
uhf_tasks/: CMakeLists.txt
uhf_tasks/src/: Queue.hpp  TaskProcessorRegistry.cpp
wtf_be/: CMakeLists.txt
wtf_be/src/: BackendConfiguration.cpp  BackendConfiguration.hpp  LibLoader.cpp  LibLoader.hpp  MHD_config.h.orig  QueryReply.hpp  ServiceConfiguration.cpp  ServiceConfiguration.hpp  ServiceInvocator.cpp  ServiceInvocator.hpp  main.cpp  main.cpp.old
wtf_daemon/: CMakeLists.txt
wtf_daemon/src/: main.cpp
wtf_job/: CMakeLists.txt
wtf_job/src/: API.cpp  Job.cpp  JobManager.cpp
wtf_svc/: CMakeLists.txt
wtf_svc/include/: Service.hpp  ServiceFactory.hpp  ServiceRegistry.hpp  ServiceTemplate.hpp
wtf_svc/src/: Service.cpp  ServiceRegistry.cpp
wtf_svc_sysmon/: CMakeLists.txt  ServiceDiskInfo.cpp  ServiceDiskInfo.hpp  ServiceProcInfo.cpp  ServiceProcInfo.hpp  ServiceSystemInfo.cpp  ServiceSystemInfo.hpp
wtf_svc_wwwget/: CMakeLists.txt  ServiceGetFile.cpp  ServiceGetFile.hpp
(+375 files in other folders)
